@@ -37,14 +37,18 @@ public class ReporteFortalecimientoService {
     @Value("${app.frontend.url:http://localhost:4200}")
     private String baseUrl;
 
-    // Fuentes Réplica PHP (Arial -> Helvetica en PDF)
-    private static final Font FONT_TITULO = FontFactory.getFont(FontFactory.HELVETICA_BOLD, 10);
+    // --- FUENTES & ESTILOS (Sincronizado con PHP) ---
+    private static final Font FONT_TITULO = FontFactory.getFont(FontFactory.HELVETICA_BOLD, 11);
+    private static final Font FONT_BOLD_10 = FontFactory.getFont(FontFactory.HELVETICA_BOLD, 10);
     private static final Font FONT_BOLD_8 = FontFactory.getFont(FontFactory.HELVETICA_BOLD, 8);
     private static final Font FONT_BOLD_7 = FontFactory.getFont(FontFactory.HELVETICA_BOLD, 7);
     private static final Font FONT_NORMAL_8 = FontFactory.getFont(FontFactory.HELVETICA, 8);
     private static final Font FONT_NORMAL_7 = FontFactory.getFont(FontFactory.HELVETICA, 7);
     private static final Font FONT_LINK = FontFactory.getFont(FontFactory.HELVETICA, 8, Font.UNDERLINE, new Color(5, 64, 209));
-    private static final Color COLOR_BLANCO = Color.WHITE;
+
+    // COLORES
+    private static final Color COLOR_FONDO_TITULO = new Color(232, 232, 232); // Gris subtítulos
+    private static final Color COLOR_CABECERA_TABLA = new Color(240, 240, 240); // Gris tablas
 
     @Transactional(readOnly = true)
     public byte[] generarPdf(String id) throws Exception {
@@ -53,7 +57,9 @@ public class ReporteFortalecimientoService {
                 .orElseThrow(() -> new Exception("Evento FFC no encontrado: " + id));
 
         try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-            Document document = new Document(PageSize.A4, 30, 30, 30, 30);
+            // Margen superior 120 para respetar la cabecera fija
+            Document document = new Document(PageSize.A4, 30, 30, 120, 30);
+
             PdfWriter writer = PdfWriter.getInstance(document, out);
             writer.setPageEvent(new HeaderFooterPageEvent());
 
@@ -61,37 +67,38 @@ public class ReporteFortalecimientoService {
 
             // --- TÍTULO DISTRITO ---
             String nombreCorte = obtenerNombreCorte(entity.getDistritoJudicialId());
-            Paragraph pCorte = new Paragraph(nombreCorte, FONT_TITULO); // PHP: Arial 12 Bold Centered
+            Paragraph pCorte = new Paragraph(nombreCorte.toUpperCase(), FONT_TITULO);
             pCorte.setAlignment(Element.ALIGN_CENTER);
-            pCorte.setSpacingAfter(5f);
+            pCorte.setSpacingAfter(10);
             document.add(pCorte);
 
-            // --- NÚMERO (Alineado derecha) ---
-            PdfPTable tableNum = new PdfPTable(2);
+            // --- NÚMERO DE FICHA (Estilo Caja a la derecha) ---
+            PdfPTable tableNum = new PdfPTable(3);
             tableNum.setWidthPercentage(100);
-            tableNum.setWidths(new float[]{85, 15});
-            PdfPCell cVacia = new PdfPCell(new Phrase("")); cVacia.setBorder(Rectangle.NO_BORDER);
+            tableNum.setWidths(new float[]{80, 5, 15});
 
-            // Recuadro con el ID
-            PdfPCell cNum = new PdfPCell(new Phrase(entity.getId(), FONT_BOLD_8));
-            cNum.setHorizontalAlignment(Element.ALIGN_CENTER);
-            cNum.setBorder(Rectangle.BOX);
+            PdfPCell cVacia = new PdfPCell(new Phrase(""));
+            cVacia.setBorder(Rectangle.NO_BORDER);
 
-            // Etiqueta "N°: "
-            PdfPTable tRight = new PdfPTable(2);
-            tRight.setWidths(new float[]{30, 70});
-            PdfPCell cLbl = new PdfPCell(new Phrase("N°: ", FONT_BOLD_8)); cLbl.setBorder(Rectangle.NO_BORDER); cLbl.setHorizontalAlignment(Element.ALIGN_RIGHT);
-            tRight.addCell(cLbl);
-            tRight.addCell(cNum);
+            PdfPCell cLabelNum = new PdfPCell(new Phrase("N°:", FONT_BOLD_8));
+            cLabelNum.setHorizontalAlignment(Element.ALIGN_RIGHT);
+            cLabelNum.setVerticalAlignment(Element.ALIGN_MIDDLE);
+            cLabelNum.setBorder(Rectangle.NO_BORDER);
 
-            PdfPCell cWrapper = new PdfPCell(tRight); cWrapper.setBorder(Rectangle.NO_BORDER);
+            PdfPCell cValNum = new PdfPCell(new Phrase(entity.getId(), FONT_NORMAL_8));
+            cValNum.setHorizontalAlignment(Element.ALIGN_CENTER);
+            cValNum.setVerticalAlignment(Element.ALIGN_MIDDLE);
+            cValNum.setBorder(Rectangle.BOX);
+            cValNum.setPadding(3);
 
             tableNum.addCell(cVacia);
-            tableNum.addCell(cWrapper);
+            tableNum.addCell(cLabelNum);
+            tableNum.addCell(cValNum);
             document.add(tableNum);
 
+            agregarEspacio(document);
+
             // --- DATOS GENERALES ---
-            // PHP imprime etiquetas directas
             agregarFila(document, "Resolución Anual que Aprueba el Plan", ": N° " + val(entity.getResolucionPlanAnual()));
             agregarFila(document, "Resolución Administrativa que Aprueba el Plan", ": N° " + val(entity.getResolucionAdminPlan()));
             agregarFila(document, "Documento que Autoriza Actividad/Evento", ": N° " + val(entity.getDocumentoAutoriza()));
@@ -120,38 +127,38 @@ public class ReporteFortalecimientoService {
                 agregarFila(document, "Observación", ": " + val(entity.getPublicoObjetivoDetalle()));
             }
 
-            agregarSeparador(document);
+            agregarLineaSeparadora(document);
 
             // --- I. LUGAR ---
-            document.add(new Paragraph("I. LUGAR DE LA ACTIVIDAD (SOLO PRESENCIAL): ", FONT_BOLD_8));
+            agregarSubtitulo(document, "I. LUGAR DE LA ACTIVIDAD (SOLO PRESENCIAL):");
+
             agregarFila(document, "Nombre de la Institución", ": " + val(entity.getNombreInstitucion()));
             agregarFila(document, "Región", ": " + obtenerNombreDepa(entity.getDepartamentoId()));
             agregarFila(document, "Provincia", ": " + obtenerNombreProv(entity.getProvinciaId()));
             agregarFila(document, "Distrito", ": " + obtenerNombreDist(entity.getDistritoGeograficoId()));
 
-            document.add(Chunk.NEWLINE);
+            agregarEspacio(document);
 
             // --- II. PARTICIPANTES (MATRIZ) ---
-            document.add(new Paragraph("II. N° DE PARTICIPANTES POR RANGO DE EDAD Y GÉNERO: ", FONT_BOLD_8));
-            document.add(Chunk.NEWLINE);
+            agregarSubtitulo(document, "II. N° DE PARTICIPANTES POR RANGO DE EDAD Y GÉNERO:");
+            agregarEspacio(document);
+
             crearMatrizParticipantes(document, entity.getParticipantes());
-            document.add(Chunk.NEWLINE);
+
+            agregarEspacio(document);
 
             // --- III. DESCRIPCIÓN ---
-            document.add(new Paragraph("III. DESCRIPCIÓN DE LA ACTIVIDAD REALIZADA (DETALLAR OBJETIVO,FINALIDAD) ", FONT_BOLD_8));
-            agregarBloqueTexto(document, entity.getDescripcionActividad());
+            agregarBloqueTexto(document, "III. DESCRIPCIÓN DE LA ACTIVIDAD REALIZADA (DETALLAR OBJETIVO, FINALIDAD):", entity.getDescripcionActividad());
 
             // --- IV. ALIADOS ---
-            document.add(new Paragraph("IV. INSTITUCIONES ALIADAS: ", FONT_BOLD_8));
-            agregarBloqueTexto(document, entity.getInstitucionesAliadas());
+            agregarBloqueTexto(document, "IV. INSTITUCIONES ALIADAS:", entity.getInstitucionesAliadas());
 
             // --- V. OBSERVACIONES ---
-            document.add(new Paragraph("V. OBSERVACIONES: ", FONT_BOLD_8));
-            agregarBloqueTexto(document, entity.getObservaciones());
+            agregarBloqueTexto(document, "V. OBSERVACIONES:", entity.getObservaciones());
 
             // --- VI. ACTIVIDAD OPERATIVA ---
-            document.add(Chunk.NEWLINE);
-            document.add(new Paragraph("VI. ACTIVIDAD OPERATIVA REALIZADA: ", FONT_BOLD_8));
+            agregarEspacio(document);
+            agregarSubtitulo(document, "VI. ACTIVIDAD OPERATIVA REALIZADA:");
 
             if (entity.getTareasRealizadas() != null && !entity.getTareasRealizadas().isEmpty()) {
                 List<MaeTareaEntity> tareas = entity.getTareasRealizadas().stream()
@@ -159,31 +166,37 @@ public class ReporteFortalecimientoService {
 
                 // Lista de Actividades
                 tareas.stream().map(t -> t.getIndicador().getActividad()).distinct()
-                        .forEach(a -> agregarItemLista(document, a.getId() + " " + a.getDescripcion()));
+                        .forEach(a -> agregarBloqueSimple(document, a.getId() + " " + a.getDescripcion()));
 
-                // a) Indicadores
                 document.add(new Paragraph("a) Indicadores de la Actividad Operativa: ", FONT_NORMAL_8));
                 tareas.stream().map(MaeTareaEntity::getIndicador).distinct()
-                        .forEach(i -> agregarItemLista(document, "     " + i.getId() + " " + i.getDescripcion()));
+                        .forEach(i -> agregarBloqueSimple(document, "     " + i.getId() + " " + i.getDescripcion()));
 
-                // b) Tareas
                 document.add(new Paragraph("b) Tareas Realizadas de la Actividad Operativa: ", FONT_NORMAL_8));
-                tareas.forEach(t -> agregarItemLista(document, "          " + t.getId() + " " + t.getDescripcion()));
+                tareas.forEach(t -> agregarBloqueSimple(document, "          " + t.getId() + " " + t.getDescripcion()));
             } else {
-                agregarBloqueTexto(document, "SIN REGISTROS");
+                agregarEspacio(document);
+                agregarBloqueSimpleCentrado(document, "SIN REGISTROS");
             }
 
-            document.add(Chunk.NEWLINE);
-
             // --- VIII. ANEXOS (Salta de VI a VIII como en PHP) ---
-            document.add(new Paragraph("VIII. ANEXOS: ", FONT_BOLD_8));
+            agregarEspacio(document);
+            agregarSubtitulo(document, "VIII. ANEXOS:");
 
-            // Links
-            agregarLink(document, "Ver formato de atención (Haz clic aquí)", baseUrl + "/publico/v1/fortalecimiento/anexo/" + id);
-            agregarLink(document, "Ver videos (Haz clic aquí)", baseUrl + "/visor/ffc/videos/" + id);
-            agregarLink(document, "Ver fotografías (Haz clic aquí)", baseUrl + "/visor/ffc/fotos/" + id);
+            // Links con estilo azul
+            Anchor linkFicha = new Anchor("Ver formato de atención (Haz clic aquí)", FONT_LINK);
+            linkFicha.setReference(baseUrl + "/descargar/anexo/" + id);
+            document.add(new Paragraph(linkFicha));
 
-            agregarSeparador(document);
+            Anchor linkVideo = new Anchor("Ver videos (Haz clic aquí)", FONT_LINK);
+            linkVideo.setReference(baseUrl + "/visor/ffc/videos/" + id);
+            document.add(new Paragraph(linkVideo));
+
+            Anchor linkFoto = new Anchor("Ver fotografías (Haz clic aquí)", FONT_LINK);
+            linkFoto.setReference(baseUrl + "/visor/ffc/fotos/" + id);
+            document.add(new Paragraph(linkFoto));
+
+            agregarLineaSeparadora(document);
 
             // --- PIE ---
             // PHP: Fecha de Registro del Evento: ... Registrado por: ...
@@ -219,9 +232,6 @@ public class ReporteFortalecimientoService {
     //           LÓGICA MATRIZ (TABLA)
     // ==========================================
     private void crearMatrizParticipantes(Document doc, List<MovEventoDetalleEntity> lista) throws DocumentException {
-        // La tabla tiene: Columna Tipo (Ancha) + 4 Rangos * 3 Cols (12) + Total (1) = 14 Columnas
-        // PHP headers: 0-17, 18-29, 30-59, 60+
-
         PdfPTable table = new PdfPTable(14);
         table.setWidthPercentage(100);
         // Anchos aproximados
@@ -233,13 +243,15 @@ public class ReporteFortalecimientoService {
 
         // --- FILA 1: Rangos ---
         PdfPCell cVacia = new PdfPCell(new Phrase("")); cVacia.setBorder(Rectangle.NO_BORDER);
-        table.addCell(cVacia); // Celda sobre "Tipo" vacía en esta fila
+        table.addCell(cVacia); // Celda sobre "Tipo" vacía
 
         String[] rangos = {"0-17 AÑOS", "18-29 AÑOS", "30-59 AÑOS", "60+ AÑOS"};
         for (String r : rangos) {
             PdfPCell cRango = new PdfPCell(new Phrase(r, FONT_BOLD_7));
             cRango.setColspan(3);
             cRango.setHorizontalAlignment(Element.ALIGN_CENTER);
+            cRango.setBackgroundColor(COLOR_CABECERA_TABLA);
+            cRango.setPadding(3f);
             table.addCell(cRango);
         }
         table.addCell(cVacia); // Celda sobre Total vacía
@@ -247,9 +259,9 @@ public class ReporteFortalecimientoService {
         // --- FILA 2: Cabeceras Columnas ---
         agregarCeldaHeader(table, "Tipo de participante");
         for(int i=0; i<4; i++) {
-            agregarCeldaHeader(table, "F");
-            agregarCeldaHeader(table, "M");
-            agregarCeldaHeader(table, "LGTBIQ");
+            agregarCeldaSubHeader(table, "F");
+            agregarCeldaSubHeader(table, "M");
+            agregarCeldaSubHeader(table, "LGTBIQ");
         }
         agregarCeldaHeader(table, "TOTAL");
 
@@ -257,26 +269,20 @@ public class ReporteFortalecimientoService {
         if (lista == null || lista.isEmpty()) {
             PdfPCell c = new PdfPCell(new Phrase("SIN REGISTROS", FONT_NORMAL_7));
             c.setColspan(14); c.setHorizontalAlignment(Element.ALIGN_CENTER);
+            c.setPadding(5f);
             table.addCell(c);
         } else {
-            // Agrupar por Tipo de Participante
             Map<Integer, List<MovEventoDetalleEntity>> agrupado = lista.stream()
                     .collect(Collectors.groupingBy(MovEventoDetalleEntity::getTipoParticipanteId));
-
-            int granTotal = 0;
 
             for (Map.Entry<Integer, List<MovEventoDetalleEntity>> entry : agrupado.entrySet()) {
                 String nombreTipo = obtenerNombreTipoParticipante(entry.getKey());
                 agregarCeldaDato(table, nombreTipo, Element.ALIGN_LEFT);
 
-                // Mapear por rangoEdad ("01", "02", "03", "04")
-                // Asumo que en BD guardas códigos "01", "02"... o textos.
-                // Ajustar mapeo según tu data real. Aquí asumo mapeo directo o lógica de negocio.
-                // Usaré un mapa temporal para buscar rápido.
                 Map<String, MovEventoDetalleEntity> porRango = entry.getValue().stream()
                         .collect(Collectors.toMap(MovEventoDetalleEntity::getRangoEdad, x -> x, (p1, p2) -> p1));
 
-                String[] codigosRango = {"01", "02", "03", "04"}; // Ajustar a tus códigos reales
+                String[] codigosRango = {"01", "02", "03", "04"}; // Ajustar a tus códigos de BD
                 int totalFila = 0;
 
                 for (String cod : codigosRango) {
@@ -293,12 +299,9 @@ public class ReporteFortalecimientoService {
                 // Total Fila
                 PdfPCell cTotal = new PdfPCell(new Phrase(String.valueOf(totalFila), FONT_BOLD_7));
                 cTotal.setHorizontalAlignment(Element.ALIGN_CENTER);
+                cTotal.setPadding(3f);
                 table.addCell(cTotal);
-                granTotal += totalFila;
             }
-
-            // Fila Final (Total General) si se desea, el PHP pone el total general abajo a la derecha
-            // Aquí lo dejaremos limpio.
         }
         doc.add(table);
     }
@@ -307,6 +310,17 @@ public class ReporteFortalecimientoService {
     //              HELPERS VISUALES
     // ==========================================
 
+    private void agregarSubtitulo(Document doc, String texto) throws DocumentException {
+        PdfPTable table = new PdfPTable(1);
+        table.setWidthPercentage(100);
+        PdfPCell cell = new PdfPCell(new Phrase(texto, FONT_BOLD_8));
+        cell.setBackgroundColor(COLOR_FONDO_TITULO);
+        cell.setBorder(Rectangle.BOX);
+        cell.setPadding(4f);
+        table.addCell(cell);
+        doc.add(table);
+    }
+
     private void agregarFila(Document doc, String label, String value) throws DocumentException {
         PdfPTable table = new PdfPTable(2);
         table.setWidthPercentage(100);
@@ -314,59 +328,87 @@ public class ReporteFortalecimientoService {
 
         PdfPCell c1 = new PdfPCell(new Phrase(label, FONT_NORMAL_8));
         c1.setBorder(Rectangle.NO_BORDER);
+        c1.setPadding(3f);
 
         PdfPCell c2 = new PdfPCell(new Phrase(value, FONT_NORMAL_8));
         c2.setBorder(Rectangle.NO_BORDER);
+        c2.setPadding(3f);
 
         table.addCell(c1);
         table.addCell(c2);
         doc.add(table);
     }
 
-    private void agregarBloqueTexto(Document doc, String texto) throws DocumentException {
+    private void agregarBloqueTexto(Document doc, String titulo, String contenido) throws DocumentException {
+        agregarEspacio(doc);
+        agregarSubtitulo(doc, titulo);
+
         PdfPTable table = new PdfPTable(1);
         table.setWidthPercentage(100);
-        PdfPCell c = new PdfPCell(new Phrase((texto != null && !texto.isBlank()) ? texto : " ", FONT_NORMAL_8));
+        String texto = (contenido == null || contenido.trim().isEmpty()) ? "SIN REGISTROS" : contenido;
+        PdfPCell c = new PdfPCell(new Phrase(texto, FONT_NORMAL_8));
         c.setBorder(Rectangle.BOX);
         c.setPadding(5f);
+        if(texto.equals("SIN REGISTROS")) c.setHorizontalAlignment(Element.ALIGN_CENTER);
         table.addCell(c);
         doc.add(table);
     }
 
-    private void agregarItemLista(Document doc, String texto) {
+    private void agregarBloqueSimple(Document doc, String contenido) {
         try {
             PdfPTable table = new PdfPTable(1);
             table.setWidthPercentage(100);
-            PdfPCell c = new PdfPCell(new Phrase(texto, FONT_NORMAL_8));
-            c.setBorder(Rectangle.NO_BORDER); // PHP usa MultiCell con borde 1, aquí lista simple
-            c.setBorder(Rectangle.BOX); // Replica el borde de PHP para las tareas
+            PdfPCell c = new PdfPCell(new Phrase(val(contenido), FONT_NORMAL_8));
+            c.setBorder(Rectangle.BOX);
+            c.setPadding(3f);
             table.addCell(c);
             doc.add(table);
         } catch (Exception e) {}
     }
 
-    private void agregarLink(Document doc, String texto, String url) throws DocumentException {
-        Anchor anchor = new Anchor(texto, FONT_LINK);
-        anchor.setReference(url);
-        doc.add(new Paragraph(anchor));
+    private void agregarBloqueSimpleCentrado(Document doc, String contenido) throws DocumentException {
+        PdfPTable table = new PdfPTable(1); table.setWidthPercentage(100);
+        PdfPCell cell = new PdfPCell(new Phrase(contenido, FONT_NORMAL_8));
+        cell.setBorder(Rectangle.BOX); cell.setHorizontalAlignment(Element.ALIGN_CENTER);
+        cell.setPadding(3f);
+        table.addCell(cell); doc.add(table);
     }
 
     private void agregarSeparador(Document doc) throws DocumentException {
-        Paragraph p = new Paragraph("-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------", FONT_NORMAL_8);
-        p.setSpacingBefore(2f);
-        p.setSpacingAfter(2f);
-        doc.add(p);
+        agregarLineaSeparadora(doc);
+    }
+
+    private void agregarLineaSeparadora(Document doc) throws DocumentException {
+        doc.add(Chunk.NEWLINE);
+        doc.add(new Paragraph("----------------------------------------------------------------------------------------------------------------------------------", FONT_NORMAL_8));
+        doc.add(Chunk.NEWLINE);
+    }
+
+    private void agregarEspacio(Document doc) throws DocumentException {
+        doc.add(new Paragraph(" ", FONT_NORMAL_7));
     }
 
     private void agregarCeldaHeader(PdfPTable t, String txt) {
-        PdfPCell c = new PdfPCell(new Phrase(txt, FONT_NORMAL_7)); // PHP no usa bold en headers de tabla participante
+        PdfPCell c = new PdfPCell(new Phrase(txt, FONT_BOLD_7));
         c.setHorizontalAlignment(Element.ALIGN_CENTER);
+        c.setVerticalAlignment(Element.ALIGN_MIDDLE);
+        c.setBackgroundColor(COLOR_CABECERA_TABLA);
+        c.setPadding(3f);
         t.addCell(c);
+    }
+
+    private void agregarCeldaSubHeader(PdfPTable table, String text) {
+        PdfPCell cell = new PdfPCell(new Phrase(text, FONT_BOLD_7));
+        cell.setHorizontalAlignment(Element.ALIGN_CENTER);
+        cell.setBackgroundColor(COLOR_CABECERA_TABLA);
+        cell.setPadding(3f);
+        table.addCell(cell);
     }
 
     private void agregarCeldaDato(PdfPTable t, String txt, int align) {
         PdfPCell c = new PdfPCell(new Phrase(txt, FONT_NORMAL_7));
         c.setHorizontalAlignment(align);
+        c.setPadding(3f);
         t.addCell(c);
     }
 
@@ -389,33 +431,36 @@ public class ReporteFortalecimientoService {
     static class HeaderFooterPageEvent extends PdfPageEventHelper {
         public void onStartPage(PdfWriter writer, Document document) {
             try {
+                float pageTop = document.getPageSize().getHeight();
+
                 // Logo
                 try {
-                    Image logo = Image.getInstance(getClass().getResource("/images/ENCABEZADO.JPG"));
-                    logo.scaleToFit(300, 50);
-                    logo.setAbsolutePosition(25, document.getPageSize().getHeight() - 50);
+                    Image logo = Image.getInstance(getClass().getResource("/images/ENCABEZADO.jpg"));
+                    logo.scaleToFit(500, 50);
+                    // Posición fija
+                    logo.setAbsolutePosition(30, pageTop - 70);
                     writer.getDirectContent().addImage(logo);
                 } catch (Exception e) {}
 
                 // Títulos Cabecera
                 ColumnText.showTextAligned(writer.getDirectContent(), Element.ALIGN_CENTER,
-                        new Phrase("FORTALECIMIENTO DE CAPACIDADES", FONT_BOLD_8),
+                        new Phrase("FORTALECIMIENTO DE CAPACIDADES", FONT_BOLD_10),
                         (document.right() - document.left()) / 2 + document.leftMargin(),
-                        document.top() - 30, 0);
+                        pageTop - 90, 0);
 
                 ColumnText.showTextAligned(writer.getDirectContent(), Element.ALIGN_CENTER,
-                        new Phrase("(INFORME)", FONT_BOLD_8),
+                        new Phrase("(INFORME)", FONT_BOLD_10),
                         (document.right() - document.left()) / 2 + document.leftMargin(),
-                        document.top() - 42, 0);
+                        pageTop - 105, 0);
 
             } catch (Exception e) {}
         }
 
         public void onEndPage(PdfWriter writer, Document document) {
             ColumnText.showTextAligned(writer.getDirectContent(), Element.ALIGN_CENTER,
-                    new Phrase("Página " + writer.getPageNumber(), FONT_NORMAL_7), // PHP usa I (Italic) 8
+                    new Phrase("Página " + writer.getPageNumber(), FONT_NORMAL_8), // PHP usa I (Italic) 8
                     (document.right() - document.left()) / 2 + document.leftMargin(),
-                    document.bottom() - 15, 0);
+                    document.bottom() - 20, 0);
         }
     }
 }
